# kaito_type

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/assets/css/: styles.css
backend/assets/js/: login.js  script.js
backend/examples/: gen_key.rs  quick_dev.rs
backend/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
backend/src/_dev_utils/: dev_db.rs  mod.rs
backend/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
backend/src/ctx/: mod.rs
backend/src/log/: mod.rs
backend/src/model/: base.rs  error.rs  mod.rs  script.rs  user.rs
backend/src/model/store/: error.rs  mod.rs
backend/src/utils/: error.rs  mod.rs
backend/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_scripts.rs  routes_static.rs
backend/src/web/html/: mod.rs  script.rs
backend/src/web/rpc/: mod.rs  script_rpc.rs
backend/templates/components/: check_script.html  spawn_script.html
backend/templates/layouts/: base.html
backend/templates/pages/: root.html
backend/templates/pages/login/: login-page.html
backend/tests/: quick_dev.rs
backend/web-folder/: index.html
