[package]
name = "backend"
version = "0.3.0"
edition = "2021"

[dependencies]
# HTMX related
# link templates to structs
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
# async
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Axum - web
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
# Data
# NOTE: keep these downgraded until further update
# issue with pool conns with sqlx 0.7.3 and sqlb 0.4
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.3" # Optional
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# crypt and encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
# Other
uuid = {version = "1", features = [ "v4", "fast-rng" ]}
time = "0.3"
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
# protect concurrent tests that use external recourses
serial_test = "2"
